web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-rest/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,25)
1|function *g(a, b, c, ...yield){}
 |                       ^
